Fix spacing when no text
MT-644

--- a/src/scss/components/_animal-disease.scss
+++ b/src/scss/components/_animal-disease.scss
@@ -4,8 +4,8 @@
   .intro {
     margin-top: $spacer-small;
     font-size: $font-size-body;
-    & + .disclosure {
-      margin-top: $spacer-small;
-    }
+  }
+  .disclosure {
+    margin-top: $spacer-small;
   }
 }
